# langchain-basics

./: .env  DataIngestion.ipynb  HTMLHeadertextsplitter.ipynb  README.md  RecursiveJsonSplitter.ipynb  character_text_splitter.ipynb  documnetIgestion.ipynb  pyproject.toml  recursive_character_text_Splitter.ipynb  requirements.txt  speech.txt
3.1 Jupyter Notebook/: HelloJupyter.ipynb  JavaScript.ipynb  python.ipynb
3.1 Jupyter Notebook/.ipynb_checkpoints/: JavaScript-checkpoint.ipynb
3.2 DataIngestion/: DataIngestion.ipynb  speech.txt
3.3 DataTransformer/: HTMLHeadertextsplitter.ipynb  RecursiveJsonSplitter.ipynb  character_text_splitter.ipynb  recursive_character_text_Splitter.ipynb
3.3 Embeddings/: embedding.ipynb  huggingfaceEmbeddin.ipynb  ollamaEmbeddings.ipynb
3.4 Embeddings/: embedding.ipynb  ollamaEmbeddings.ipynb
3.4 vectorStore/: chromaDB.ipynb  speech.txt
3.4 vectorStore/chroma_db/: chroma.sqlite3
3.4 vectorStore/faiss_index/: index.faiss
3.5 vectorStore/: chromaDB.ipynb  faiss.ipynb
3.5 vectorStore/faiss_index/: index.pkl
